[package]
name = "filterfrom"
version = "0.4.1"
authors = ["blakehawkins"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Utility application for filtering stdin based on a banlist"
homepage = "https://github.com/blakehawkins/filterfrom"
repository = "https://github.com/blakehawkins/filterfrom"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
oops = "0.1.0"
stdinix = "0.1.0"
